--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
     },
-    "dependencies": {}
+    "dependencies": {
+        "bootstrap-icons": "^1.5.0",
+        "jquery": "^3.6.0"
+    }
 }
